--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="box-1">
         <img class="top-cloud" src="img\cloud.png" alt="">
-        <h1>I'm Aliya Shambetalieva</h1>
+        <h1>I'm Mohamed Jabli</h1>
         <h2>I am a Programmer.</h2>
         <img class="bottom-cloud" src="img\cloud.png" alt="">
         <img src="img\mountain.png" alt="">
